# threepole

./: .gitignore  README.md  overlay.html  package.json  profile.html  setup.html  tsconfig.json  vite.config.ts
src/: consts.ts  global.css  overlay.html  preferences.html  profile.html  timer.ts  types.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  config.rs  consts.rs  main.rs  poller.rs  pollers.rs
src-tauri/src/api/: requests.rs  responses.rs
src-tauri/src/config/: preferences.rs  prefs.rs  profiles.rs
src-tauri/src/pollers/: overlay.rs  playerdata.rs
src/core/: consts.ts  global.css  ipc.ts  types.ts  util.ts
src/overlay/: overlay.css  overlay.html  overlay.ts  popups.css  popups.ts  types.ts
src/preferences/: PreferencesWindow.svelte  StyledCheckbox.svelte  preferences.ts  types.ts
src/profile/: Profile.svelte  ProfileAdd.svelte  ProfileWindow.svelte  profile.ts  types.ts
src/setup/: setup.css  setup.ts
src/svelte/: LineButton.svelte  Window.svelte
src/window/: Window.svelte  window.css  window.html  window.ts
src/window/details/: DetailsWindow.svelte  Dot.svelte  PreviousRaid.svelte
src/window/preferences/: PreferencesWindow.svelte  StyledCheckbox.svelte
src/window/profile/: LoaderWidget.svelte  ProfileWidget.svelte  ProfileWindow.svelte
src/window/profiles/: ProfileWidget.svelte  ProfilesWindow.svelte
